--- a/app/public/index.html
+++ b/app/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Amazon Personalize</title>
+  <title>Amazon Personalize Demo</title>
 </head>
 
 <body>
